@@ -1,3 +1,11 @@
+2011-03-04  Mikael Djurfeldt  <mikael@djurfeldt.com>
+
+	* application_mapper.cc, application_mapper.hh, music.cc: Added an
+	option -e to the music launcher tool.  This option causes the
+	music launcher tool to write down one launcher script for each
+	application.  These scripts can be used in place of the music tool
+	in environments which require this.
+
 2010-07-28  Mikael Djurfeldt  <mikael@djurfeldt.com>
 
 	* Release 1.0.7
